--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@forestadmin/datasource-mongoose": "^1.0.0-beta.13",
     "@sentry/node": "^7.21.1",
     "@sentry/tracing": "^7.21.1",
+    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "bower": "^1.8.14",
