--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@forestadmin/datasource-mongoose": "^1.0.0-beta.13",
     "@sentry/node": "^7.21.1",
     "@sentry/tracing": "^7.21.1",
+    "3commas-api-node": "^1.2.0",
     "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -52,6 +53,7 @@
     "qs-stringify": "^1.2.1",
     "random-useragent": "^0.5.0",
     "sequelize": "^6.25.2",
+    "urlsafe-base64": "^1.0.0",
     "uuid": "^8.3.2",
     "xhr2": "^0.2.1"
   }
